@@ -10,6 +10,7 @@
 -【httpd/EXE】index.htmlを有効化しました。
 -【httpd/EXE】大きいファイルをダウンロードする場合、すべてメモリに展開しないようにしました。
 -【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
+-【adiary.conf.cgi.sample】{<$Form_options.multipart_use_temp>}を{<$Form_options.use_temp_flag>}に変更。((ディレクトリ名を設定するのかフラグを設定するのか非常にわかりにくく、自分でハマってしまったので……。))
 -【Fix】稀に最初のファイルアップロードに失敗することがある。
 -【Fix】静的出力時、ヘッダにゴミが出力される。
 -【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
